# property-manager

./: .gitignore  README.md  pyproject.toml
property_manager/: main.py
property_manager/schema/: task.py
