[tool.poetry]
name = "property-manager"
version = "0.1.0"
description = ""
authors = ["neilneuwirth <neil.neuwirth15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.2"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
instructor = "^0.3.4"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
